# good-jackal

./: README.md
lab_6_ws/: remote-jackal.sh
lab_6_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
lab_6_ws/devel/include/good_jackal/: Tracked_Object.h
lab_6_ws/devel/share/common-lisp/ros/good_jackal/msg/: Tracked_Object.lisp  _package.lisp  _package_Tracked_Object.lisp  good_jackal-msg.asd
lab_6_ws/devel/share/good_jackal/cmake/: good_jackal-msg-extras.cmake  good_jackal-msg-paths.cmake  good_jackalConfig.cmake
lab_6_ws/src/good_jackal/: CMakeLists.txt  package.xml
lab_6_ws/src/good_jackal/launch/: all_jackal.launch  follow.launch  jackal.launch
lab_6_ws/src/good_jackal/msg/: Tracked_Object.msg
lab_6_ws/src/good_jackal/scripts/: calibration.py  filtering.py  headless_tracker.py  joy_start.py  motion.py  remote-jackal4.sh
